--- a/web-api/package.json
+++ b/web-api/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/albertlockett/sports-betting#readme",
   "devDependencies": {
+    "@types/elasticsearch": "5.0.38",
     "@types/node": "16.4.10",
     "@typescript-eslint/eslint-plugin": "4.28.5",
     "@typescript-eslint/parser": "4.28.5",
@@ -33,7 +34,11 @@
   },
   "dependencies": {
     "apollo-server-express": "3.1.1",
+    "cors": "2.8.5",
+    "elasticsearch": "16.7.2",
     "express": "4.17.1",
-    "graphql": "15.5.1"
+    "graphql": "15.5.1",
+    "graphql-compose": "9.0.2",
+    "graphql-compose-elasticsearch": "5.0.0"
   }
 }
