--- a/web-api/package.json
+++ b/web-api/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/albertlockett/sports-betting#readme",
   "devDependencies": {
     "@types/elasticsearch": "5.0.38",
+    "@types/lodash": "^4.14.172",
     "@types/node": "16.4.10",
+    "@types/node-fetch": "2.5.12",
     "@typescript-eslint/eslint-plugin": "4.28.5",
     "@typescript-eslint/parser": "4.28.5",
     "eslint": "7.32.0",
@@ -39,6 +41,8 @@
     "express": "4.17.1",
     "graphql": "15.5.1",
     "graphql-compose": "9.0.2",
-    "graphql-compose-elasticsearch": "5.0.0"
+    "graphql-compose-elasticsearch": "5.0.0",
+    "lodash": "4.17.21",
+    "node-fetch": "2.6.1"
   }
 }
