--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,8 +3,13 @@ steps:
     args: ['build', '-f', './sources/Dockerfile', '-t', 'gcr.io/albertlockett-test2/sports-betting:latest', './sources']
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/albertlockett-test2/sports-betting:latest']
+  
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-f', './sources/Dockerfile-service', '-t', 'gcr.io/albertlockett-test2/sports-betting-service:latest', './sources']
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/albertlockett-test2/sports-betting-service:latest']
-    
+  
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-f', './sources/Dockerfile', '-t', 'gcr.io/albertlockett-test2/sports-betting-web-api:latest', './sources']
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/albertlockett-test2/sports-betting-web-api:latest']
