--- a/web-api/Dockerfile
+++ b/web-api/Dockerfile
@@ -10,6 +10,6 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install --only=production
 COPY --from=build /usr/src/app/build ./build
-COPY ./static ./
+COPY ./static/graphiql.html ./static/graphiql.html
 EXPOSE 4000
 CMD npm start
