--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "parcel build app/static/index.html",
     "start:dev": "parcel app/static/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
