--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   # frontend
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-f', './front-end/Dockerfile', '--build-arg', 'ENDPOINT=http://web-api/graphql', '-t', 'gcr.io/albertlockett-test2/sports-betting-front-end:latest', './front-end']
+    args: ['build', '-f', './front-end/Dockerfile', '--build-arg', 'ENDPOINT=http://wapi.bettingmutualfund.ca/graphql', '-t', 'gcr.io/albertlockett-test2/sports-betting-front-end:latest', './front-end']
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/albertlockett-test2/sports-betting-front-end:latest']
   #cronjobs
