--- a/k8s/web-api.yaml
+++ b/k8s/web-api.yaml
@@ -27,9 +27,10 @@ kind: Service
 metadata:
   name: web-api
 spec:
+  type: NodePort
   selector:
     app: web-api
   ports:
   - protocol: TCP
     port: 80
-    targetPort: 8080
+    targetPort: 4000
